--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.14.1",
+    "export-to-csv": "^1.4.0",
     "material-react-table": "^3.2.1",
     "next": "16.0.0",
     "react": "19.2.0",
